--- a/Descuentos.html
+++ b/Descuentos.html
@@ -7,7 +7,24 @@
     <title>Porcentajes y descuentos</title>
 </head>
 <body>
-    <h1>Porcentajes y descuentos</h1>
+    <header>
+        <h1>Porcentajes y descuentos</h1>
+        <p>Este es el segundo taller del curso práctivo de JavaScript</p>
+    </header>
+    <section>
+        <h2>Calcula el precio a pagar por tus productos con descuento</h2>
+        <form>
+            <label for="InputPrice">Escribe el precio original de tu producto</label>
+            <input id="InputPrice" type="number">
+            <p></p>
+            <label for="InputDiscount">Escribe el descuento original de tu producto</label>
+            <input id="InputDiscount" type="number">
+            <p></p>
+            <button type="button" onclick="onClickCalculaPrecioRebajado()">Calcular el precio con descuento</button>
+            <p id="resultPrice"></p>
+        </form>
+    </section>
+
     <script src="descuentos.js"></script>
 </body>
 </html>
